Refactoring from MVVM to MVP. Create file contains all extensions. Add unit and ui test cases. Remove libraries

--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="150dp"
+    android:layout_margin="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:elevation="3dp">
 
@@ -19,4 +21,4 @@
         android:lines="1"
         tools:text = "Title"
         android:layout_height="wrap_content"/>
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
